[package]
name = "scdm"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.3", features = [
	"postgres",
	"runtime-tokio",
	"time",
	"uuid",
	"chrono",
] }
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
